# py-healthchecks.io

./: .cookiecutter.json  .flake8  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.md  README.rst  bandit.yml  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: constraints.txt  labeler.yml  pre-release.yml  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
src/healthchecks_io/: __init__.py
src/healthchecks_io/client/: __init__.py  _abstract.py  async_client.py  asyncclient.py  check_trap.py  exceptions.py  sync_client.py
src/healthchecks_io/schemas/: __init__.py  badges.py  checks.py  integrations.py
tests/: __init__.py  conftest.py
tests/client/: test_abstract.py  test_async.py  test_check_trap.py  test_sync.py
tests/schemas/: test_badges.py  test_checks.py  test_integrations.py
