[tool.poetry]
name = "healthchecks_io"
version = "0.0.0"
description = "A python client package for Healthchecks.io API"
authors = ["Andrew Herrington <andrew.the.techie@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/andrewthetechie/py-healthchecks.io"
repository = "https://github.com/andrewthetechie/py-healthchecks.io"
documentation = "https://py-healthchecks.io.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/andrewthetechie/py-healthchecks.io/releases"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"
pydantic = "^1.8.2"
httpx = "^0.21.1"
croniter = "^1.1.0"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^6.2"}
safety = "^1.10.3"
mypy = "^0.910"
typeguard = "^2.13.2"
xdoctest = {extras = ["colors"], version = "^0.15.10"}
sphinx = "^4.3.2"
sphinx-autobuild = ">=2021.3.14"
pre-commit = "^2.16.0"
flake8 = "^4.0.1"
black = ">=21.10b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.0.1"
sphinx-click = "^3.0.2"
Pygments = "^2.11.2"
pyupgrade = "^2.31.0"
furo = ">=2021.11.12"
pytest-cov = "^3.0.0"
types-croniter = "^1.0.6"
types-pytz = "^2021.3.3"
pytest_async = "^0.1.1"
pytest-asyncio = "^0.16.0"
respx = "^0.19.0"
pytest-mock = "^3.6.1"
pytest-lazy-fixture = "^0.6.3"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["healthchecks_io"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
dirty = true

[tool.poetry-dynamic-versioning.substitution]
files = ["src/healthchecks_io/__init__.py"]
