[tool.poetry]
name = "healthchecks_io"
version = "0.0.0"
description = "A python client package for Healthchecks.io API"
authors = ["Andrew Herrington <andrew.the.techie@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/andrewthetechie/py-healthchecks.io"
repository = "https://github.com/andrewthetechie/py-healthchecks.io"
documentation = "https://py-healthchecks.io.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Framework :: AsyncIO"
]

[tool.poetry.urls]
Changelog = "https://github.com/andrewthetechie/py-healthchecks.io/releases"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.9.1"
httpx = ">=0.23.0,<0.24.0"
croniter = "^1.1.0"
pytz = ">=2021.3,<2023.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
coverage = {extras = ["toml"], version = "^7.1"}
safety = "^2.3.5"
mypy = "^0.991"
typeguard = "^2.13.2"
xdoctest = {extras = ["colors"], version = "^1.1.0"}
sphinx = "^4.3.2"
sphinx-autobuild = ">=2021.3.14"
pre-commit = "^2.21.0"
flake8 = "^4.0.1"
black = ">=21.10b0"
flake8-bandit = "^3.0.0"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
pep8-naming = "^0.13.2"
darglint = "^1.8.1"
reorder-python-imports = "^3.9.0"
pre-commit-hooks = "^4.4.0"
Pygments = "^2.14.0"
pyupgrade = "^3.3.1"
furo = ">=2021.11.12"
pytest-cov = "^4.0.0"
types-croniter = "^1.3.2"
types-pytz = "^2022.7.1"
pytest_async = "^0.1.1"
pytest-asyncio = "^0.20.3"
respx = "^0.20.1"
pytest-mock = "^3.10.0"
pytest-lazy-fixture = "^0.6.3"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["healthchecks_io"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
dirty = true

[tool.poetry-dynamic-versioning.substitution]
files = ["src/healthchecks_io/__init__.py"]
