[tool.poetry]
name = "healthchecks_io"
version = "0.4.3"
description = "A python client package for Healthchecks.io API"
authors = ["Andrew Herrington <andrew.the.techie@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/andrewthetechie/py-healthchecks.io"
repository = "https://github.com/andrewthetechie/py-healthchecks.io"
documentation = "https://py-healthchecks.io.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Framework :: AsyncIO"
]

[tool.poetry.urls]
Changelog = "https://github.com/andrewthetechie/py-healthchecks.io/releases"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">=1.9.1,<3.0.0"
httpx = ">=0.23.0,<0.28.0"
croniter = ">=1.1,<3.0"
pytz = ">=2024.1,<2025.0"
packaging = "^24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = {extras = ["toml"], version = "^7.1"}
safety = ">=2.3.5,<4.0.0"
mypy = "^1.0"
xdoctest = {extras = ["colors"], version = "^1.1.1"}
sphinx = ">=4.3.2,<8.0.0"
sphinx-autobuild = ">=2021.3.14"
pre-commit = ">=2.21,<4.0"
reorder-python-imports = "^3.9.0"
pre-commit-hooks = "^4.4.0"
pyupgrade = "^3.3.1"
furo = ">=2021.11.12"
pytest-cov = ">=4,<6"
types-croniter = ">=1.3.2,<3.0.0"
types-pytz = ">=2022.7.1,<2025.0.0"
pytest-asyncio = ">=0.20.3,<0.24.0"
respx = ">=0.20.1,<0.22.0"
pytest-mock = "^3.10.0"
pytest-lazy-fixture = "^0.6.3"
pytest-xdist = "^3.2.0"
ruff = ">=0.5.0,<0.5.1"
bandit = "^1.7.4"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["healthchecks_io"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.bandit]
exclude_dirs = ["tests", "noxfile.py", ".github/scripts", "test_errbot", "dist"]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-n 4 --ignore examples --cov=healthchecks_io --cov-report xml:.coverage.xml --cov-report=term-missing --cov-fail-under 91"

[tool.ruff]
line-length = 120
target-version = "py38"
